8327095: Use FFM instead of ProcessTools